# grpc-worknote

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  ReadMe.md  azure-pipelines.yml  codegen.gradle  conanfile.py  requirements.txt  service.proto  x64-linux.cmake
cmake/: codegen.cmake  codegen_cpp.cmake  codegen_csharp.cmake  codegen_go.cmake  codegen_nodejs.cmake  codegen_python.cmake  grpc_codegen_targets.cmake  vcpkg_as_target.cmake  vcpkg_meta.cmake  x64-linux.cmake
include/: plugin_core.h  plugin_loader.h  service_core.h
modules/core/: CMakeLists.txt  libmain.cpp
modules/service/: CMakeLists.txt  grpc_completion_queue.cpp  grpc_handlers.cpp  grpc_service.cpp  grpc_shared.h  launcher.cpp  loader.cpp  loader.h
scripts/: install-cmake-3.15.sh  run-protoc.sh
src/: CMakeLists.txt  grpc_coroutine.cpp  grpc_coroutine.h  grpc_plugin.h  grpc_service.cpp  grpc_types.cpp  libmain.cpp  main.cpp  plugin_impl.cpp  plugin_impl.h  plugin_mock.cpp  process.cpp  serve.cpp  serve_queue.cpp  signal.cpp
static/: service.grpc.pb.cc  service.grpc.pb.h  service.pb.cc  service.pb.h
test/: CMakeLists.txt  test_1.py  test_async_service.cpp  test_completion_queue.cpp  test_env.cpp  test_main.cpp
tools/: CMakeLists.txt  grpc_completion_queue.cpp  grpc_coroutine.cpp  grpc_coroutine.h  grpc_handlers.cpp  grpc_service.cpp  grpc_shared.h  launcher.cpp  loader.cpp  loader.h  rpc_service.cpp  service.cpp
